remove RECORD from example config

--- a/xinetd/sample.conf
+++ b/xinetd/sample.conf
@@ -7,7 +7,7 @@ defaults
 	instances 		= 25
 	log_type 		= FILE /var/log/servicelog
 	log_on_success	= HOST PID
-	log_on_failure = HOST RECORD
+	log_on_failure = HOST 
 	only_from 		= 128.138.193.0 128.138.204.0 128.138.209.0 128.138.243.0
 	only_from 		= localhost 192.231.139.0/24
 	disabled 		= tftp
