Rework the rlim_t stuff, the RLIM_NOFILE stuff, and conditionalize some of the siginfo macros.

--- a/config.h.in
+++ b/config.h.in
@@ -102,8 +102,6 @@
 
 #undef HAVE_STRCASECMP
 
-#undef HAVE_RLIM_T
-
 #undef HAVE_DNSREGISTRATION
 
 /* OS specific */
@@ -121,9 +119,10 @@
 #undef gid_t
 #undef uid_t
 #undef socklen_t
+#undef rlim_t
 
 /* Versioning Information */
-#define XINETD_VERSION "xinetd Version 2.3.10"
+#define XINETD_VERSION "xinetd Version 20030122"
 #define MISC_VERSION   "MISC Version 1.2.2"
 #define PSET_VERSION   "PSET Version 1.2.0"
 #define SIO_VERSION    "SIO Version 1.6.2"
