The makefile needed to have the $(CC) stuf in quotes so that people can specify gcc options on the commandline. e.g. CC=\'gcc --target=x86_64\'

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,10 +25,10 @@ MISC_DEFS = @DEFS@
 LIB_DEFS = @DEFS@ 
 PROG_DEFS = @DEFS@
 
-LIBMAKEDEFS = CC=$(CC) CFLAGS='$(CFLAGS) -I../../include'
-PROGMAKEDEFS = CC=$(CC) CFLAGS='$(CFLAGS) -I../libs/include' LDFLAGS='$(LDFLAGS) -L../libs/lib'
-DEBUGLIBMAKEDEFS = CC=$(CC) CFLAGS='$(DCFLAGS) -I../../include'
-DEBUGMAKEDEFS = CC=$(CC) CFLAGS='$(DCFLAGS) -I../libs/include' LDFLAGS='$(LDFLAGS) -L../libs/lib'
+LIBMAKEDEFS = CC='$(CC)' CFLAGS='$(CFLAGS) -I../../include'
+PROGMAKEDEFS = CC='$(CC)' CFLAGS='$(CFLAGS) -I../libs/include' LDFLAGS='$(LDFLAGS) -L../libs/lib'
+DEBUGLIBMAKEDEFS = CC='$(CC)' CFLAGS='$(DCFLAGS) -I../../include'
+DEBUGMAKEDEFS = CC='$(CC)' CFLAGS='$(DCFLAGS) -I../libs/include' LDFLAGS='$(LDFLAGS) -L../libs/lib'
 
 MANDATORY_LIBS	= portable sio str misc xlog pset 
 ALL_LIBS	= portable sio str misc xlog pset 
