--- a/config.h.in
+++ b/config.h.in
@@ -120,7 +120,7 @@
 #undef rlim_t
 
 /* Versioning Information */
-#define XINETD_VERSION "xinetd Version 2.3.13-pre1cvs"
+#define XINETD_VERSION "xinetd Version 2.3.13"
 #define MISC_VERSION   "MISC Version 1.2.2"
 #define PSET_VERSION   "PSET Version 1.2.0"
 #define SIO_VERSION    "SIO Version 1.6.2"
