Tweak config to match SUSE requirements

--- a/contrib/xinetd.conf
+++ b/contrib/xinetd.conf
@@ -13,19 +13,30 @@ defaults
 #	enabled		=
 #	disabled	=
 
+# Previous default in SUSE - please don't forget to use the logrotate. The
+# sample configuration is in /usr/share/packages/doc/xinetd/logrotate
+#       log_type        = FILE /var/log/xinetd.log
+
 # Define general logging characteristics.
 	log_type	= SYSLOG daemon info 
-	log_on_failure	= HOST
-	log_on_success	= PID HOST DURATION EXIT
+	log_on_failure	= HOST ATTEMPT
+	log_on_success	= HOST EXIT DURATION
 
 # Define access restriction defaults
 #
 #	no_access	=
-#	only_from	=
+#	only_from	= localhost
 #	max_load	= 0
 	cps		= 50 10
-	instances	= 50
+	instances	= 30
 	per_source	= 10
+
+#
+# The specification of an interface is interesting, if we are on a firewall.
+# For example, if you only want to provide services from an internal
+# network interface, you may specify your internal interfaces IP-Address.
+#
+#	bind	= 127.0.0.1
 
 # Address and networking defaults
 #
