--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,36 @@
-AC_INIT(xinetd/main.c)
+# Process this file with autoconf to create configure.
 
-AC_CANONICAL_SYSTEM
+AC_PREREQ([2.65])
 
+# ====================
+# Version informations
+# ====================
+m4_define([xinetd_version_major],[2])
+m4_define([xinetd_version_minor],[3])
+m4_define([xinetd_version_micro],[16])
+m4_define([xinetd_version],[xinetd_version_major.xinetd_version_minor.xinetd_version_micro])
+
+# =============
+# Automake init
+# =============
+AC_INIT([xinetd],[xinetd_version])
+AC_CONFIG_MACRO_DIR([m4])
+#AM_INIT_AUTOMAKE([1.11 foreign dist-xz dist-bzip2])
+AM_SILENT_RULES([yes])
+AC_LANG([C])
+
+# ===========================
+# Find required base packages
+# ===========================
+AC_PROG_CPP
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_PROG_RANLIB
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
 
+# ======================================
+# Check for various headers and settings
+# ======================================
 AC_CHECK_LIB(compat, main)
 AC_SEARCH_LIBS(gethostbyname, nsl socket resolv)
 AC_SEARCH_LIBS(getnameinfo, nsl socket resolv)
@@ -19,7 +44,6 @@ AC_CHECK_FUNCS(ecvt, ,
    AC_CHECK_LIB(m, ecvt))
 AC_CHECK_FUNCS(gcvt, ,
    AC_CHECK_LIB(m, gcvt))
-
 AC_CHECK_FUNC(strerror, [AC_DEFINE(HAVE_STRERROR, 1, "")])
 AC_CHECK_FUNC(strcasecmp, [AC_DEFINE(HAVE_STRCASECMP, 1, "")])
 AC_CHECK_FUNC(socket, ,
@@ -35,7 +59,6 @@ AC_CHECK_LIB(c, sys_siglist, [AC_DEFINE(HAVE_SYS_SIGLIST, 1, "")])
 AC_CHECK_FUNC(gai_strerror,[AC_DEFINE(HAVE_GAI_STRERROR, 1, "")])
 AC_CHECK_FUNC(freeaddrinfo,[AC_DEFINE(HAVE_FREEADDRINFO, 1, "")])
 AC_CHECK_FUNC(getaddrinfo,[AC_DEFINE(HAVE_GETADDRINFO, 1, "")])
-
 AC_CHECK_HEADERS(sys/types.h sys/termios.h termios.h sys/ioctl.h sys/select.h rpc/rpc.h rpc/rpcent.h sys/file.h ftw.h machine/reg.h netdb.h)
 AC_CHECK_HEADER(sys/resource.h, [AC_DEFINE(HAVE_SYS_RESOURCE_H, 1, "")])
 AC_CHECK_HEADER(arpa/inet.h, [AC_DEFINE(HAVE_ARPA_INET_H, 1, "")])
@@ -48,23 +71,6 @@ AC_CHECK_HEADER(stdint.h, [AC_DEFINE(HAVE_STDINT_H, 1, "")])
 AC_CHECK_HEADER(stdbool.h, [AC_DEFINE(HAVE_STDBOOL_H, 1, "")])
 AC_CHECK_HEADER(sys/filio.h, [AC_DEFINE(HAVE_SYS_FILIO_H, 1, "")])
 AC_CHECK_HEADER(DNSServiceDiscovery/DNSServiceDiscovery.h, [AC_DEFINE(HAVE_DNSREGISTRATION, 1, "") AC_DEFINE(HAVE_MDNS, 1, "")])
-
-AC_ARG_WITH(howl, [  --with-howl=PATH        Compile in howl support.  
-                          PATH is the prefix where howl is installed,
-                          and is not optional.],
-   [ OLDCFLAGS=$CFLAGS; CFLAGS="-I$withval/include/howl/ $CFLAGS"; 
-     OLDLDFLAGS=$LDFLAGS; LDFLAGS="-L$withval/lib/ $LDFLAGS"; 
-     OLDCPPFLAGS=$CPPFLAGS; CPPFLAGS="-I$withval/include/howl/ $CPPFLAGS";
-     AC_CHECK_HEADER($withval/include/howl/howl.h, 
-        [AC_DEFINE(HAVE_HOWL, 1, "") AC_DEFINE(HAVE_MDNS, 1, "")], 
-        [CFLAGS=$OLDCFLAGS; LDFLAGS=$OLDLDFLAGS; CPPFLAGS=$OLDCPPFLAGS;]) 
-     AC_CHECK_LIB(howl, sw_discovery_publish, [LIBS="-lhowl $LIBS"], [
-        OLDLIBS=$LIBS; LIBS="-lpthread $LIBS"; 
-        AC_CHECK_LIB(howl, main, [LIBS="-lhowl $LIBS"],
-           [LIBS=$OLDLIBS]) 
-     ])
-   ])
-
 XINETD_CHECK_TYPE(uint16_t, unsigned short)
 XINETD_CHECK_TYPE(uint32_t, unsigned int)
 XINETD_CHECK_TYPE(uint64_t, unsigned long long)
@@ -72,7 +78,19 @@ XINETD_CHECK_TYPE(uid_t, unsigned int)
 XINETD_CHECK_TYPE(gid_t, unsigned int)
 XINETD_CHECK_TYPE(socklen_t, unsigned int)
 XINETD_CHECK_TYPE(rlim_t, long long)
+AC_FUNC_MMAP
+AC_CHECK_FUNCS(isatty)
+AC_CHECK_FUNCS(memcpy)
+AC_CHECK_FUNCS(waitpid)
+AC_CHECK_FUNCS(sigvec)
+AC_CHECK_FUNCS(setsid)
+AC_CHECK_FUNCS(strftime)
+AC_CHECK_LIB(c, crypt, [:], [AC_CHECK_LIB(crypt, crypt, [LIBS="-lcrypt $LIBS" AC_DEFINE(HAVE_LIBCRYPT, 1, "") ], []) ])
+AC_CHECK_LIB(m, log10, [ LIBS="-lm $LIBS" ], [])
 
+# ========
+# Addrinfo
+# ========
 AC_CACHE_CHECK([for struct addrinfo], ac_cv_have_struct_addrinfo, [
         AC_TRY_COMPILE(
                 [
@@ -136,9 +154,51 @@ if test "x$ac_cv_have_struct_sockaddr_storage" = "xyes" ; then
         AC_DEFINE(HAVE_STRUCT_SOCKADDR_STORAGE, 1, "")
 fi
 
+# ======
+# Switch
+# ======
+AC_ARG_ENABLE(debug,
+	AS_HELP_STRING([--enable-debug], [Build with debug symbols.]),
+	[enable_debug="$enableval"],
+	[enable_debug=no]
+)
+AS_IF([test "x$enable_debug" != "xno"], [
+	CFLAGS="$CFLAGS -g"
+], [
+	AC_DEFINE([NDEBUG], [], [Disable debugging information])
+])
+
+AC_ARG_ENABLE([werror],
+	[AS_HELP_STRING([--disable-werror], [Treat all warnings as errors, useful for development])],
+	[enable_werror="$enableval"],
+	[enable_werror=yes]
+)
+AS_IF([test x"$enable_werror" != "xno"], [
+	CFLAGS="$CFLAGS -Werror"
+])
+AS_IF([test x"$GCC" = xyes], [
+	# Be tough with warnings and produce less careless code
+	CFLAGS="$CFLAGS -Wall -Wextra -pedantic"
+])
+
+AC_ARG_WITH([howl],
+    [AS_HELP_STRING([--with-howl=PATH], [Compile in howl support.  
+                          PATH is the prefix where howl is installed,
+                          and is not optional.])],
+   [ OLDCFLAGS=$CFLAGS; CFLAGS="-I$withval/include/howl/ $CFLAGS"; 
+     OLDLDFLAGS=$LDFLAGS; LDFLAGS="-L$withval/lib/ $LDFLAGS"; 
+     OLDCPPFLAGS=$CPPFLAGS; CPPFLAGS="-I$withval/include/howl/ $CPPFLAGS";
+     AC_CHECK_HEADER($withval/include/howl/howl.h, 
+        [AC_DEFINE(HAVE_HOWL, 1, "") AC_DEFINE(HAVE_MDNS, 1, "")], 
+        [CFLAGS=$OLDCFLAGS; LDFLAGS=$OLDLDFLAGS; CPPFLAGS=$OLDCPPFLAGS;]) 
+     AC_CHECK_LIB(howl, sw_discovery_publish, [LIBS="-lhowl $LIBS"], [
+        OLDLIBS=$LIBS; LIBS="-lpthread $LIBS"; 
+        AC_CHECK_LIB(howl, main, [LIBS="-lhowl $LIBS"],
+           [LIBS=$OLDLIBS]) 
+     ])
+   ])
 
 case "$target_os" in
-
 solaris*)
 	AC_DEFINE(N0_SIGLIST, 1, "")
 	AC_DEFINE(solaris, 1, "")
@@ -242,17 +302,6 @@ darwin* | "Mac OS"*)
 esac
 
 
-AC_CHECK_LIB(c, crypt, [:], [
- AC_CHECK_LIB(crypt, crypt, [
-  LIBS="-lcrypt $LIBS"
-  AC_DEFINE(HAVE_LIBCRYPT, 1, "") ], []) ])
-
-AC_CHECK_LIB(m, log10, [ LIBS="-lm $LIBS" ], [])
-
-AC_MSG_CHECKING(whether to default to ipv6)
-AC_ARG_WITH(inet6, [  --with-inet6    Compile in ipv6 support. (obsolete)],
-AC_MSG_RESULT(ignored), AC_MSG_RESULT(ignored) )
-
 AC_MSG_CHECKING(whether to use libwrap)
 AC_ARG_WITH(libwrap,
 [  --with-libwrap[=PATH]   Compile in libwrap (tcp_wrappers) support.],
@@ -317,28 +366,33 @@ AC_ARG_WITH(labeled-networking,
 	AC_MSG_RESULT(no)
 )
 
-AC_FUNC_MMAP
+# ==============
+# Setup config.h
+# ==============
+AC_CONFIG_HEADERS([config.h])
 
-AC_CHECK_FUNCS(isatty)
-AC_CHECK_FUNCS(memcpy)
-AC_CHECK_FUNCS(waitpid)
-AC_CHECK_FUNCS(sigvec)
-AC_CHECK_FUNCS(setsid)
-AC_CHECK_FUNCS(strftime)
+# =====================
+# Prepare all .in files
+# =====================
+AC_CONFIG_FILES([
+Makefile
+libs/src/misc/Makefile
+libs/src/pset/Makefile
+libs/src/sio/Makefile
+libs/src/str/Makefile
+libs/src/xlog/Makefile
+libs/src/portable/Makefile
+xinetd/Makefile
+])
+AC_OUTPUT
 
-# AC_CHECK_TYPE(R_OK,4)
-
-
-mkdir -p libs/src/misc
-mkdir -p libs/src/pset
-mkdir -p libs/src/sio
-mkdir -p libs/src/str
-mkdir -p libs/src/xlog
-mkdir -p libs/include
-mkdir -p libs/lib
-mkdir -p libs/man
-
-AC_CONFIG_HEADER(config.h)
-AC_OUTPUT(Makefile libs/src/misc/Makefile libs/src/pset/Makefile libs/src/sio/Makefile libs/src/str/Makefile libs/src/xlog/Makefile libs/src/portable/Makefile xinetd/Makefile)
-
-cp config.h libs/include
+# ==============================================
+# Display final informations about configuration
+# ==============================================
+AC_MSG_NOTICE([
+==============================================================================
+Build configuration:
+	debug:              ${enable_debug}
+	werror:             ${enable_werror}
+==============================================================================
+])
