--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 Makefile
 Makefile.in
+.deps
+.dirstamp
 
 # http://www.gnu.org/software/autoconf
 
@@ -18,6 +20,8 @@ Makefile.in
 /compile
 /config.guess
 /config.h.in
+/config.h
+/config.status
 /config.sub
 /config.log
 /configure
