Reflect new directory structure

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,140 +6,140 @@ EXTRA_DIST = \
 	CHANGELOG
 
 AM_CFLAGS = \
-	-I$(top_srcdir)/xinetd \
-	-I$(top_srcdir)/xinetd/misc \
-	-I$(top_srcdir)/xinetd/portable \
-	-I$(top_srcdir)/xinetd/pset \
-	-I$(top_srcdir)/xinetd/sio \
-	-I$(top_srcdir)/xinetd/str \
-	-I$(top_srcdir)/xinetd/xlog
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/src/misc \
+	-I$(top_srcdir)/src/portable \
+	-I$(top_srcdir)/src/pset \
+	-I$(top_srcdir)/src/sio \
+	-I$(top_srcdir)/src/str \
+	-I$(top_srcdir)/src/xlog
 
 sbin_PROGRAMS = xinetd
 xinetd_SOURCES = \
-	xinetd/access.c \
-	xinetd/access.h \
-	xinetd/addr.c \
-	xinetd/addr.h \
-	xinetd/attr.h \
-	xinetd/builtins.c \
-	xinetd/builtins.h \
-	xinetd/conf.c \
-	xinetd/conf.h \
-	xinetd/confparse.c \
-	xinetd/confparse.h \
-	xinetd/connection.c \
-	xinetd/connection.h \
-	xinetd/defs.h \
-	xinetd/env.c \
-	xinetd/env.h \
-	xinetd/child.c \
-	xinetd/child.h \
-	xinetd/ident.c \
-	xinetd/ident.h \
-	xinetd/includedir.c \
-	xinetd/includedir.h \
-	xinetd/inet.c \
-	xinetd/inet.h \
-	xinetd/init.c \
-	xinetd/init.h \
-	xinetd/int.c \
-	xinetd/intcommon.c \
-	xinetd/intcommon.h \
-	xinetd/internals.c \
-	xinetd/internals.h \
-	xinetd/int.h \
-	xinetd/itox.c \
-	xinetd/log.c \
-	xinetd/logctl.c \
-	xinetd/logctl.h \
-	xinetd/log.h \
-	xinetd/main.c \
-	xinetd/main.h \
-	xinetd/mask.h \
-	xinetd/misc/m_env.c \
-	xinetd/misc/m_env.h \
-	xinetd/misc/misc.c \
-	xinetd/misc/misc.h \
-	xinetd/msg.c \
-	xinetd/msg.h \
-	xinetd/nvlists.c \
-	xinetd/nvlists.h \
-	xinetd/options.c \
-	xinetd/options.h \
-	xinetd/parse.c \
-	xinetd/parse.h \
-	xinetd/parsers.c \
-	xinetd/parsers.h \
-	xinetd/parsesup.c \
-	xinetd/parsesup.h \
-	xinetd/portable/compat.h \
-	xinetd/portable/cvt.c \
-	xinetd/portable/difftime.c \
-	xinetd/portable/fake-getaddrinfo.c \
-	xinetd/portable/fake-getaddrinfo.h \
-	xinetd/portable/fake-getnameinfo.c \
-	xinetd/portable/inet_aton.c \
-	xinetd/portable/inet_ntop.c \
-	xinetd/portable/libportable.h \
-	xinetd/portable/strcasecmp.c \
-	xinetd/portable/strerror.c \
-	xinetd/pset/ops.c \
-	xinetd/pset/pset.c \
-	xinetd/pset/pset.h \
-	xinetd/reconfig.c \
-	xinetd/reconfig.h \
-	xinetd/redirect.c \
-	xinetd/redirect.h \
-	xinetd/retry.c \
-	xinetd/retry.h \
-	xinetd/sconf.c \
-	xinetd/sconf.h \
-	xinetd/sconst.h \
-	xinetd/sensor.c \
-	xinetd/sensor.h \
-	xinetd/server.c \
-	xinetd/server.h \
-	xinetd/service.c \
-	xinetd/service.h \
-	xinetd/signals.c \
-	xinetd/signals.h \
-	xinetd/sio/impl.h \
-	xinetd/sio/sio.c \
-	xinetd/sio/sioconf.h \
-	xinetd/sio/sio.h \
-	xinetd/sio/siosup.c \
-	xinetd/sio/sprint.c \
-	xinetd/special.c \
-	xinetd/special.h \
-	xinetd/state.h \
-	xinetd/str/str.h \
-	xinetd/str/strparse.c \
-	xinetd/str/strparse.h \
-	xinetd/str/strprint.c \
-	xinetd/str/strutil.c \
-	xinetd/tcpint.c \
-	xinetd/tcpint.h \
-	xinetd/time.c \
-	xinetd/timex.h \
-	xinetd/udpint.c \
-	xinetd/udpint.h \
-	xinetd/util.c \
-	xinetd/util.h \
-	xinetd/xconfig.h \
-	xinetd/xgetloadavg.c \
-	xinetd/xgetloadavg.h \
-	xinetd/xlog/filelog.c \
-	xinetd/xlog/filelog.h \
-	xinetd/xlog/impl.h \
-	xinetd/xlog/slog.c \
-	xinetd/xlog/slog.h \
-	xinetd/xlog/util.c \
-	xinetd/xlog/xlog.c \
-	xinetd/xlog/xlog.h \
-	xinetd/xmdns.c \
-	xinetd/xmdns.h \
-	xinetd/xtimer.c \
-	xinetd/xtimer.h
+	src/access.c \
+	src/access.h \
+	src/addr.c \
+	src/addr.h \
+	src/attr.h \
+	src/builtins.c \
+	src/builtins.h \
+	src/conf.c \
+	src/conf.h \
+	src/confparse.c \
+	src/confparse.h \
+	src/connection.c \
+	src/connection.h \
+	src/defs.h \
+	src/env.c \
+	src/env.h \
+	src/child.c \
+	src/child.h \
+	src/ident.c \
+	src/ident.h \
+	src/includedir.c \
+	src/includedir.h \
+	src/inet.c \
+	src/inet.h \
+	src/init.c \
+	src/init.h \
+	src/int.c \
+	src/intcommon.c \
+	src/intcommon.h \
+	src/internals.c \
+	src/internals.h \
+	src/int.h \
+	src/itox.c \
+	src/log.c \
+	src/logctl.c \
+	src/logctl.h \
+	src/log.h \
+	src/main.c \
+	src/main.h \
+	src/mask.h \
+	src/misc/m_env.c \
+	src/misc/m_env.h \
+	src/misc/misc.c \
+	src/misc/misc.h \
+	src/msg.c \
+	src/msg.h \
+	src/nvlists.c \
+	src/nvlists.h \
+	src/options.c \
+	src/options.h \
+	src/parse.c \
+	src/parse.h \
+	src/parsers.c \
+	src/parsers.h \
+	src/parsesup.c \
+	src/parsesup.h \
+	src/portable/compat.h \
+	src/portable/cvt.c \
+	src/portable/difftime.c \
+	src/portable/fake-getaddrinfo.c \
+	src/portable/fake-getaddrinfo.h \
+	src/portable/fake-getnameinfo.c \
+	src/portable/inet_aton.c \
+	src/portable/inet_ntop.c \
+	src/portable/libportable.h \
+	src/portable/strcasecmp.c \
+	src/portable/strerror.c \
+	src/pset/ops.c \
+	src/pset/pset.c \
+	src/pset/pset.h \
+	src/reconfig.c \
+	src/reconfig.h \
+	src/redirect.c \
+	src/redirect.h \
+	src/retry.c \
+	src/retry.h \
+	src/sconf.c \
+	src/sconf.h \
+	src/sconst.h \
+	src/sensor.c \
+	src/sensor.h \
+	src/server.c \
+	src/server.h \
+	src/service.c \
+	src/service.h \
+	src/signals.c \
+	src/signals.h \
+	src/sio/impl.h \
+	src/sio/sio.c \
+	src/sio/sioconf.h \
+	src/sio/sio.h \
+	src/sio/siosup.c \
+	src/sio/sprint.c \
+	src/special.c \
+	src/special.h \
+	src/state.h \
+	src/str/str.h \
+	src/str/strparse.c \
+	src/str/strparse.h \
+	src/str/strprint.c \
+	src/str/strutil.c \
+	src/tcpint.c \
+	src/tcpint.h \
+	src/time.c \
+	src/timex.h \
+	src/udpint.c \
+	src/udpint.h \
+	src/util.c \
+	src/util.h \
+	src/xconfig.h \
+	src/xgetloadavg.c \
+	src/xgetloadavg.h \
+	src/xlog/filelog.c \
+	src/xlog/filelog.h \
+	src/xlog/impl.h \
+	src/xlog/slog.c \
+	src/xlog/slog.h \
+	src/xlog/util.c \
+	src/xlog/xlog.c \
+	src/xlog/xlog.h \
+	src/xmdns.c \
+	src/xmdns.h \
+	src/xtimer.c \
+	src/xtimer.h
 
 distclean-local:
 	rm -rf *.cache *~
